--- a/components/productDetails/productDetails.html
+++ b/components/productDetails/productDetails.html
@@ -1,12 +1,12 @@
 <div class="jumbotron text-center">
     <div class="row">
         <div class="col-md-7">
-            <img src="common/images/single_autox500-jpg-crop.png" />
+            <img ng-src="{{::vm.product.images[0].url.https}}" />
         </div>
         <div class="col-md-5 text-left padding-side-30px">
-            <h4 class="item-title" ng-bind="::vm.product.name"></h4>
-            <p><h3><span>INR</span> <span ng-bind="::vm.product.price"></span></h3></p>
-            <p ng-bind="::vm.product.description">If you are just buying for yourself, choose your favorite coffee bean and get it delivered monthly. You can change the blend each month if you would like.</p>
+            <h4 class="item-title" ng-bind="::vm.product.title"></h4>
+            <p><h3><span ng-bind="::vm.product.price.data.raw.without_tax | currency: '&#8377;'"></span></h3></p>
+            <p ng-bind="::vm.product.description"></p>
             <br/>
             <div style="width:120px;">
                 <div class="input-group">
@@ -26,6 +26,9 @@
                 <button ng-if="vm.cartItem" class="btn btn-important" ng-bind="::vm.labelService.labels.productUpdateNow" ng-click="vm.updateCart()"></button>
             </p>
             <br/>
+        </div>
+        <div class="loading backdrop-color" ng-show="vm.loading">
+            <div class="loading-image"><i class="fa fa-refresh"></i></div>
         </div>
     </div>
 </div>
