--- a/components/checkout/checkout.html
+++ b/components/checkout/checkout.html
@@ -132,9 +132,16 @@
                                 </div>
                             </div>
                         </div>
-
-                        <div class="col-sm-12">
-                            <a class="btn btn-important pull-right" ng-disabled="address.$invalid">Proceed to Shipping</a>
+                        <div class="col-sm-12 agree">
+                            <span class="fa-stack" ng-click="vm.updateAgree()">
+                                <i class="fa fa-square-o fa-stack-2x" style="visibility:visible"></i>
+                                <i class="fa fa-check fa-stack-1x" ng-style="vm.agreeCheckStyle" name="check-box"></i>
+                            </span>
+                            <input type="checkbox" class="checkbox-inline ng-hide" name="agree" ng-model="vm.agree" ng-true-value="'yes'" ng-false-value="'no'" />
+                            <span>I agree to the <a class="underline" href="#/doc/termsandcondition">Terms and Conditions</a> and <a class="underline" href="#/doc/shipping">Shipping Policy</a></span>
+                        </div>
+                        <div class="col-sm-12 margin-top-30">
+                            <a class="btn btn-important pull-right" ng-disabled="address.$invalid || vm.agree == 'no'">Proceed to Shipping</a>
                         </div>
                     </div>
                 </div>
