--- a/components/footer/footer.css
+++ b/components/footer/footer.css
@@ -2,14 +2,21 @@ footer {
 	width: 100%;
 	background: #363636;
 	color: #fff;
-	height: 60px;
+	min-height: 60px;
 	font-size: 16px;
 	line-height: 30px;
 	padding-right: 10px;
     padding-top: 15px;
-    position: fixed;
+    position: relative;
     bottom: 0px;
     z-index: 2;
+}
+    footer .copyright {
+        margin-left: 15px;
+        font-size: 12px;
+    }
+footer a {
+    color: #fff;
 }
 
 .social {
@@ -17,13 +24,10 @@ footer {
     width: 40px;
     display: inline-block;
     text-align: center;
-    color: #fff;
 }
-
-.social-buttons {
-    margin-left: 20px;
+.underline {
+    text-decoration: underline;
 }
-
-.social-buttons a:hover {
+footer a:hover {
     color: #AFAFAF;
 }
