--- a/components/checkout/checkout.css
+++ b/components/checkout/checkout.css
@@ -123,6 +123,10 @@ checkout .form-group {
     pointer-events: none;
 }
 
+.agree {
+    padding:0px 30px;
+}
+
 @media screen and (min-width: 769px) {
     .bs-wizard > .bs-wizard-step .bs-wizard-stepnum {
         font-size: 16px;
