--- a/components/footer/footer.html
+++ b/components/footer/footer.html
@@ -1,8 +1,30 @@
-<div class="pull-right">
-    <span ng-bind="::vm.labelService.labels.knowUs"></span>
-    <span class="social-buttons">
-        <a class="social" href="{{::vm.labelService.labels.socialLinks.facebook}}"><i class="fa fa-facebook"></i></a>
-        <a class="social" href="{{::vm.labelService.labels.socialLinks.twitter}}"><i class="fa fa-twitter"></i></a>
-        <a class="social" href="{{::vm.labelService.labels.socialLinks.linkedin}}"><i class="fa fa-linkedin"></i></a>
-    </span>
+<div class="container">
+    <div class="row">
+        <div class="copyright col-xs-12 col-sm-5">
+            <div>Copyright &#169; 2016 Pentagrit All Rights Reserved.</div>
+            <div class="hidden-lg hidden-md">
+                <span ng-bind="::vm.labelService.labels.knowUs"></span>
+                <div class="social-buttons">
+                    <a class="social" target="_blank" href="{{::vm.labelService.labels.socialLinks.facebook}}"><i class="fa fa-facebook"></i></a>
+                    <a class="social" target="_blank" href="{{::vm.labelService.labels.socialLinks.twitter}}"><i class="fa fa-twitter"></i></a>
+                    <a class="social" target="_blank" href="{{::vm.labelService.labels.socialLinks.linkedin}}"><i class="fa fa-linkedin"></i></a>
+                </div>
+            </div>
+            <div><a class="underline" target="_blank" href="#/doc/termsandcondition">Terms and Conditions</a></div>
+            <div><a class="underline" target="_blank" href="#/doc/privacy">Privacy Policy</a></div>
+            <div><a class="underline" target="_blank" href="#/doc/shipping">Shipping Policy</a></div>
+        </div>
+        <div class="text-right pull-right col-xs-5 visible-md visible-lg">
+            <span ng-bind="::vm.labelService.labels.knowUs"></span>
+            <div class="social-buttons">
+                <a class="social" target="_blank" href="{{::vm.labelService.labels.socialLinks.facebook}}"><i class="fa fa-facebook"></i></a>
+                <a class="social" target="_blank"  href="{{::vm.labelService.labels.socialLinks.twitter}}"><i class="fa fa-twitter"></i></a>
+                <a class="social" target="_blank" href="{{::vm.labelService.labels.socialLinks.linkedin}}"><i class="fa fa-linkedin"></i></a>
+            </div>
+        </div>
+    </div>
 </div>
+<br /><br />
+
+
+
