--- a/components/checkout/checkout.html
+++ b/components/checkout/checkout.html
@@ -138,7 +138,7 @@
                                 <i class="fa fa-check fa-stack-1x" ng-style="vm.agreeCheckStyle" name="check-box"></i>
                             </span>
                             <input type="checkbox" class="checkbox-inline ng-hide" name="agree" ng-model="vm.agree" ng-true-value="'yes'" ng-false-value="'no'" />
-                            <span>I agree to the <a class="underline" href="#/doc/termsandcondition">Terms and Conditions</a> and <a class="underline" href="#/doc/shipping">Shipping Policy</a></span>
+                            <span>I agree to the <a class="underline" href="#/doc/termsandcondition" target="_blank">Terms and Conditions</a> and <a class="underline" href="#/doc/shipping" target="_blank">Shipping Policy</a></span>
                         </div>
                         <div class="col-sm-12 margin-top-30">
                             <a class="btn btn-important pull-right" ng-disabled="address.$invalid || vm.agree == 'no'">Proceed to Shipping</a>
