updated loading issue

--- a/components/shop/shop.html
+++ b/components/shop/shop.html
@@ -1,7 +1,10 @@
 <div class="jumbotron row onsale text-center">
+    <div class="loading backdrop-color" ng-show="vm.productsLoading">
+        <div class="loading-image"><i class="fa fa-refresh"></i></div>
+    </div>
     <h2 class="heading-font" ng-bind="::vm.labelService.labels.introTitle"></h2>
     <p ng-bind="::vm.labelService.labels.introDesc"></p>
-    <div class="col-md-12 box-top">
+    <div class="col-md-12 box-top shop-height">
         <span class="title heading-font" ng-bind="::vm.labelService.labels.featuredProductsTitle"></span>
         <div ng-if="vm.showFeatured" class="col-md-6 text-center product" ng-repeat="product in ::vm.products | limitTo: 2">
             <img ng-src="{{::product.images[0].url.https}}">
