--- a/components/cart/cart.css
+++ b/components/cart/cart.css
@@ -15,9 +15,6 @@ cart .list-group .producttitle {
     font-weight: bold;
 }
 
-cart .productname {
-    width: 200px;
-}
 
 cart .list-group .list-group-item>div {
     height:100%;
@@ -56,6 +53,14 @@ cart .list-group .list-group-item>div {
     .list-group-item {
         margin: 20px auto 0px auto;
         display: table;
+        padding-right: 15px;
+    }
+    .list-group-item, .list-group-item table {
+        width: 100%;
+        table-layout: fixed;
+    }
+    cart .productname {
+        width: auto;
     }
 }
 
