--- a/components/shop/shop.html
+++ b/components/shop/shop.html
@@ -2,8 +2,8 @@
     <div class="loading backdrop-color" ng-show="vm.productsLoading">
         <div class="loading-image"><i class="fa fa-refresh"></i></div>
     </div>
-    <h2 class="heading-font" ng-bind="::vm.labelService.labels.introTitle"></h2>
-    <p ng-bind="::vm.labelService.labels.introDesc"></p>
+    <h2 ng-if="vm.showFeatured" class="heading-font" ng-bind="::vm.labelService.labels.introTitle"></h2>
+    <p ng-if="vm.showFeatured" ng-bind="::vm.labelService.labels.introDesc"></p>
     <div class="col-md-12 box-top shop-height">
         <span class="title heading-font" ng-bind="::vm.labelService.labels.featuredProductsTitle"></span>
         <div ng-if="vm.showFeatured" class="col-md-6 text-center product" ng-repeat="product in ::vm.products | limitTo: 2">
