changes to text in home page

--- a/components/home/home.css
+++ b/components/home/home.css
@@ -47,7 +47,8 @@ home *{
     opacity: 0.8;
 }
 .onsale {
-    padding-top: 20px;
+    padding-top: 50px;
+	margin-bottom: 35px;
 }
 .onsale img {
     width: 70%;
