--- a/components/checkout/checkout.html
+++ b/components/checkout/checkout.html
@@ -153,7 +153,7 @@
                 <h3>Items</h3>
                 <div>
                     <ul class="list-group">
-                        <li class="list-group-item animate-repeat" ng-repeat="(key, item) in vm.cart.contents">
+                        <li class="list-group-item low-padding animate-repeat" ng-repeat="(key, item) in vm.cart.contents">
                             <table>
                                 <tr>
                                     <td style="width: 50%;">
