--- a/components/confirmation/confirmation.html
+++ b/components/confirmation/confirmation.html
@@ -1,8 +1,5 @@
 <div class="container text-center text-large">
-    <div class="row margin-top-30">
-        Your Order has been placed and an email confirmation has been sent.
-    </div>
-    <div class="row margin-top-10">
-        Order ID: <strong>12FG3345</strong>
-    </div>
+	<i ng-if="vm.status == 'success'" class="fa fa-check text-success text-center"></i>
+	<i ng-if="vm.status == 'failure' || vm.status == 'error'" class="fa fa-times text-danger text-center"></i>
+    <div class="row margin-top-30" ng-bind="vm.message"></div>
 </div>
