loading popup changes

--- a/components/checkout/checkout.html
+++ b/components/checkout/checkout.html
@@ -185,4 +185,7 @@
             </div>
         </div>
     </div>
+	<div class="loading backdrop-color" ng-show="vm.loading">
+		<div class="loading-image"><i class="fa fa-refresh"></i></div>
+	</div>
 </div>
