--- a/components/home/home.css
+++ b/components/home/home.css
@@ -72,6 +72,11 @@ home *{
     bottom: 0px;
 }
 
+home .mission li {
+	padding-right: 25px;
+	height: 100px;
+}
+
 .padding-30 {
     padding: 0px 50px;
 }
@@ -158,4 +163,9 @@ button.btn:focus, button.btn:active {
     .navbar-brand {
         padding: 12px 15px;
     }
+	home .mission li {
+		padding-right: 15px;
+		height: auto;
+	}
 }
+
