--- a/components/contact/contact.html
+++ b/components/contact/contact.html
@@ -16,7 +16,7 @@
         </p>
 	</div>
 
-	<div class="col-md-6 col-md-offset-3">
+	<!--<div class="col-md-6 col-md-offset-3">
 			<div class="form contact-forms">
 				<div class="field-row" id="contact-form">
 					<input class="required form-control" placeholder="Email Address*" value="" name="fields[email]" id="fields_email"/>
@@ -30,5 +30,5 @@
 				</div>
 				<input type="submit" class="btn-important btn" value="Submit"/>
 			</div>
-	</div>
+	</div>-->
 </div>
