style change for list

--- a/components/home/home.css
+++ b/components/home/home.css
@@ -149,6 +149,10 @@ button.btn:focus, button.btn:active {
     width: 200px;
 }
 
+home .mission .chemicals  {
+	-webkit-padding-start: 0px;
+}
+
 home .mission .chemicals li {
 	height: 45px;
     line-height: 45px;
@@ -179,6 +183,10 @@ home .mission .chemicals li > div {
 	home .mission li {
 		padding-right: 15px;
 		height: auto;
+	}
+	
+	home .mission .chemicals li > div {
+		font-size: 12px;
 	}
 }
 
