list changes for responsive

--- a/components/home/home.html
+++ b/components/home/home.html
@@ -13,6 +13,6 @@
         <div class="col-md-6 no-padding" ng-class="{'col-md-push-6': $index%2 != 0}">
             <img ng-src="{{::desc.image}}">
         </div>
-        <div class="col-md-6 padding-30" ng-bind-html="::desc.desc" ng-class="{'col-md-pull-6': $index%2 != 0}"></div>
+        <div class="col-md-6 padding-30 remove-padding-mobile" ng-bind-html="::desc.desc" ng-class="{'col-md-pull-6': $index%2 != 0}"></div>
     </div>
 </div>
