changed list to ticks

--- a/components/home/home.css
+++ b/components/home/home.css
@@ -151,6 +151,12 @@ button.btn:focus, button.btn:active {
 
 home .mission .chemicals li {
 	height: 45px;
+	list-style:none;
+}
+
+home .mission .chemicals li:before {
+	position: absolute;
+    left: -15px;
 }
 
 @media only screen and (max-width: 768px) {
