--- a/components/home/home.html
+++ b/components/home/home.html
@@ -1,3 +1,4 @@
+<style>home .mission li {height: 30px;}</style>
 <div class="row">
     <div class="col-xs-12 banner">
         <img ng-src="{{vm.labelService.labels.bannerImage}}" />
@@ -9,10 +10,72 @@
 <div class="jumbotron row onsale box-default text-center mission margin-top-50" ng-repeat="item in ::vm.labelService.labels.jumbotrons">
     <h3 ng-bind="::item.title"></h3>
     <p class="space-bottom" ng-bind="::item.desc">Finding a way to serve eachother accross the world.</p>
-    <div class="row" ng-repeat="desc in ::item.items">
-        <div class="col-md-6 no-padding" ng-class="{'col-md-push-6': $index%2 != 0}">
+    <div class="row margin-top-30" ng-repeat="desc in ::item.items">
+        <div class="col-md-6 no-padding" ng-if="desc.type !=='full'" ng-class="{'col-md-push-6': $index%2 != 0}">
             <img ng-src="{{::desc.image}}">
         </div>
-        <div class="col-md-6 padding-30 remove-padding-mobile" ng-bind-html="::desc.desc" ng-class="{'col-md-pull-6': $index%2 != 0}"></div>
-    </div>
-</div>
+<div ng-if="desc.type ==='full'" class="col-xs-12" ng-bind-html="::desc.desc"></div>
+        <div ng-if="desc.type !== 'full'" class="col-md-6 padding-30 remove-padding-mobile" ng-bind-html="::desc.desc" ng-class="{'col-md-pull-6': $index%2 != 0}"></div>
+    </div> </div>
+<style>
+.timeline {
+position: relative;
+} 
+.timeline:before {
+    top: 0;
+    bottom: 0;
+    position: absolute;
+    width: 2px;
+    content: " ";
+    background-color: #4997cd;
+    left: 50%;
+    margin-left: -1.5px;
+}
+.margin-top-50 {
+  margin-top: 50px;
+}
+.timeline-item {
+  box-shadow: 0 1px 6px rgba(0, 0, 0, 0.175);
+  border: 1px solid #d4d4d4;
+  font-family: 'Lato', sans-serif;
+  margin-top: 1%;
+  padding: 0 2%;
+}
+.timeline-row {
+  position: relative;
+  display: block;
+}
+.timeline-row:before {
+  height: 70px;
+  width: 70px;
+  background: #4997cd;
+  border-radius: 50%;
+  left: 50%;
+  position: absolute;
+  margin-left: -35px;
+  line-height: 70px;
+  text-align: center;
+  color: #FFF;
+  font-size: 30px;
+}
+@media only screen and (max-width : 767px) {
+  .timeline-row.margin-top-50 {
+    margin-top: 20px;
+  }
+  .timeline-item {
+    margin-top: 80px;
+    background: #FFF;
+    text-align: center;
+  }
+}
+.products-cure li {
+  width: 300px;
+  margin: 10px 2%;
+  float: left;
+  box-shadow: 0 1px 6px rgba(0, 0, 0, 0.175);
+  border: 1px solid #d4d4d4;
+  padding: 10px;
+  height: 90px!important;
+}
+
+</style>
