--- a/components/productDetails/productDetails.html
+++ b/components/productDetails/productDetails.html
@@ -4,8 +4,8 @@
             <img ng-src="{{::vm.product.images[0].url.https}}" />
         </div>
         <div class="col-md-5 text-left padding-side-30px">
-            <h4 class="item-title" ng-bind="::vm.product.title"></h4>
-            <p><h3><span ng-bind="::vm.product.price.data.raw.without_tax | currency: '&#8377;'"></span></h3></p>
+            <h4 class="item-title" ng-bind="::vm.product.name"></h4>
+            <p><h3><span ng-bind="::vm.product.price[0].amount | currency: '&#8377;'"></span></h3></p>
             <p ng-bind="::vm.product.description"></p>
             <br/>
             <div style="width:120px;">
